--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     var myChart = new Chart(ctx, {
         type: 'pie',
         data: {
-                "labels": ["Республиканский бюджет", "Местный бюджет", "Региональный бюджет"],
+                "labels": ["A", "B", "C"],
                 "datasets": [{
-                    "data": [624, 376, 450],
-                    "keys": ["Республиканский бюджет", "Местный бюджет", "Региональный бюджет"],
+                    "data": [624546, 376321, 450145],
                     "backgroundColor" : ["#1a99f4","#00bcd4","#ffa726"]
                 }]
         },
